# satellitevu-client-python

./: .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  makefile  noxfile.py  pact.mk  pyproject.toml
.github/: version.py
.github/workflows/: merge.yml  pr.yml  sbom.yml  tag-and-release.yml  tag.yml
examples/: archive.py  auth.py  catalog.py  common.py  examples.ipynb  otm.py
notebooks/: search_and_download.ipynb
satellitevu/: __init__.py  client.py  config.py  conftest.py
satellitevu/apis/: archive.py  archive_test.py  base.py  base_test.py  catalog.py  catalog_test.py  contracts.py  exceptions.py  helpers.py  id.py  id_test.py  orders.py  orders_test.py  otm.py  otm_test.py
satellitevu/auth/: __init__.py  auth.py  auth_test.py  cache.py  cache_test.py  exc.py
satellitevu/http/: __init__.py  base.py  http_test.py  httpx.py  requests.py  urllib.py
