[tool.poetry]
name = "satellitevu"
version = "4.0.0"
description = "Client SDK for SatelliteVu's platform APIs"
authors = ["Christian Wygoda <christian.wygoda@satellitevu.com>", "Zhelini Sivanesan <zhelini.sivanesan@satellitevu.com>", "James Harrison <james.harrison@satellitevu.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
nox = "^2022.8.7"
nox-poetry = "^1.0.1"
pyfakefs = "^4.7.0"
mocket = "^3.11.1"
pytest-cov = "^4.0.0"

[tool.poetry.group.requests]
optional = true

[tool.poetry.group.requests.dependencies]
requests = "^2.28.1"

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
pandas = "^1.5.1"
geopandas = "^0.12.1"
folium = "^0.13.0"
shapely = "^1.8.5.post1"

[tool.poetry.group.httpx]
optional = true

[tool.poetry.group.httpx.dependencies]
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
